# Memoire

./: CMakeLists.txt  main.cpp
model/: Algorithms.cpp  Algorithms.hpp  Graph.cpp  Graph.hpp  randomGenerator.hpp
src/: main.cpp
src/model/: Algorithms.cpp  Algorithms.hpp  Graph.cpp  Graph.hpp  PartitionTreeLoader.hpp
src/view/: DrawableGraph.cpp  DrawableGraph.hpp  GraphWindow.cpp  GraphWindow.hpp  MainWindow.cpp  StepsWindow.cpp  StepsWindow.hpp
src/view/graphicsItems/: Arrow.cpp  Arrow.hpp  DrawableGraph.cpp  DrawableGraph.hpp  DrawableGraphNode.cpp  DrawableGraphNode.hpp  TreeLayout.hpp
src/view/graphs/: ComparabilityBigraphWindow.cpp  ComparabilityBigraphWindow.hpp  GraphWindow.cpp  GraphWindow.hpp
src/view/widgets/: DrawableGraph.cpp  DrawableGraph.hpp
src/view/windows/: GraphWindow.cpp  GraphWindow.hpp  MainWindow.cpp  MainWindow.hpp  StepsWindow.cpp  StepsWindow.hpp
view/: DrawableGraph.cpp  DrawableGraph.hpp
